# Helm

./: .gitignore  Cargo.toml  README.md  README.zh-CN.md
.github/workflows/: ci.yml  release.yml
crates/helm-cli/: Cargo.toml
crates/helm-cli/src/: main.rs
crates/helm-core/: Cargo.toml
crates/helm-core/src/: dev_server.rs  dev_server_detect.rs  error.rs  free_port.rs  git_info.rs  killer.rs  lib.rs  models.rs  project_assoc.rs  scanner.rs
crates/helm-core/src/os/: mod.rs  unix_killer.rs  windows_killer.rs
crates/helm-tauri/: Cargo.toml  tauri.conf.json
crates/helm-tauri/capabilities/: default.json
crates/helm-tauri/frontend/: index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
crates/helm-tauri/frontend/src/: App.svelte  app.css  main.svelte.ts
crates/helm-tauri/frontend/src/lib/: Header.svelte  PortDetail.svelte  PortRow.svelte  Toast.svelte  Toolbar.svelte  api.ts  i18n.svelte.ts  portsStore.svelte.ts  theme.css  types.ts
crates/helm-tauri/icons/: icon.icns
crates/helm-tauri/src/: commands.rs  main.rs  state.rs
