[workspace]
members = ["crates/helm-core", "crates/helm-cli", "crates/helm-tauri"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/your-username/helm"

[workspace.dependencies]
sysinfo = "0.32"
netstat2 = "0.10"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4", features = ["derive"] }
open = "5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
