[package]
name = "helm-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "helm"
path = "src/main.rs"

[dependencies]
helm-core = { path = "../helm-core" }
clap.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
