[package]
name = "helm-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sysinfo.workspace = true
netstat2.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile = "3"

# The `windows` crate (Win32_System_Threading for direct TerminateProcess) will
# be added in Phase E when we need finer kill control. For Phase B/C,
# sysinfo::Process::kill() wraps TerminateProcess adequately on Windows.

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal", "process"] }
